docs: some design updates

--- a/packages/docs-app/src/components/SideNav/side-nav.scss
+++ b/packages/docs-app/src/components/SideNav/side-nav.scss
@@ -13,7 +13,7 @@
   flex-direction: column;
   z-index: 7000;
   height: 100vh;
-  background-color: $ray-color-gray-03;
+  background-color: $ray-color-white;
   padding-top: 2rem;
   padding-bottom: 3rem;
   transition: left 0.15s ease; // stylelint-disable-line property-blacklist
