--- a/packages/docs-app/src/components/CodeExample/code-example.scss
+++ b/packages/docs-app/src/components/CodeExample/code-example.scss
@@ -22,7 +22,7 @@ pre[class*='language-'] {
   }
 
   pre[class*='language-'] {
-    padding-top: 0;
+    padding: $ray-spacing-md 0 $ray-spacing-md $ray-spacing-md !important;
     border: none;
     box-shadow: none;
   }
@@ -53,7 +53,7 @@ pre[class*='language-'] {
   background-color: $code-bg;
   border: 1px solid $code-border;
   border-top-width: 0;
-  padding: $ray-spacing-md 0 $ray-spacing-md $ray-spacing-md;
+  padding: 0;
   max-height: 12rem;
   height: auto;
   display: flex;
