feat(button): add dark buttons

--- a/packages/docs-app/src/components/ComponentCode/component-code.scss
+++ b/packages/docs-app/src/components/ComponentCode/component-code.scss
@@ -27,6 +27,10 @@
       background-color: $ray-color-white;
     }
 
+    &--dark {
+      background-color: hsl(0, 0%, 10%);
+    }
+
     &--rendered {
       display: flex;
       justify-content: center;
