--- a/packages/core/src/components/button/_button.scss
+++ b/packages/core/src/components/button/_button.scss
@@ -89,6 +89,34 @@
       color: rgba($ray-color-white, 0.4);
     }
 
+    &.#{$ray-class-prefix}button--dark {
+      background-color: $ray-color-white;
+      border-color: $ray-color-white;
+      color: $ray-color-blue-50;
+
+      @include ray-breakpoint(desktop) {
+        &:hover {
+          background-color: $ray-color-gray-10;
+          border-color: $ray-color-gray-10;
+        }
+      }
+
+      .#{$ray-accessibility-class} &:focus {
+        box-shadow: 0 0 0 3px transparentize($ray-color-white, 0.75);
+      }
+
+      &:active {
+        background-color: $ray-color-gray-30;
+        border-color: $ray-color-gray-30;
+      }
+
+      &[disabled] {
+        background-color: $ray-color-gray-50;
+        border-color: $ray-color-gray-50;
+        color: rgba($ray-color-blue-50, 0.4);
+      }
+    }
+
     &.#{$ray-class-prefix}button--danger {
       background-color: $ray-color-red-50;
       border-color: $ray-color-red-50;
@@ -133,6 +161,33 @@
 
     &:active {
       background-color: $ray-color-blue-20;
+    }
+
+    &.#{$ray-class-prefix}button--dark {
+      background-color: transparent;
+      border-color: $ray-color-white;
+      color: $ray-color-white;
+
+      @include ray-breakpoint(desktop) {
+        &:hover {
+          background-color: rgba($ray-color-white, 0.1);
+          border-color: $ray-color-gray-10;
+        }
+      }
+
+      .#{$ray-accessibility-class} &:focus {
+        box-shadow: 0 0 0 3px transparentize($ray-color-white, 0.75);
+      }
+
+      &:active {
+        background-color: rgba($ray-color-white, 0.2);
+      }
+
+      &[disabled] {
+        background-color: transparent;
+        color: rgba($ray-color-white, 0.6);
+        border-color: rgba($ray-color-white, 0.6);
+      }
     }
 
     &.#{$ray-class-prefix}button--danger {
@@ -216,6 +271,31 @@
 
     &:active {
       background-color: $ray-color-blue-10;
+    }
+
+    &.#{$ray-class-prefix}button--dark {
+      color: $ray-color-white;
+
+      @include ray-breakpoint(desktop) {
+        &:hover {
+          background-color: hsl(0, 0, 20%);
+          border-color: hsl(0, 0, 20%);
+        }
+      }
+
+      .#{$ray-accessibility-class} &:focus {
+        box-shadow: 0 0 0 3px transparentize($ray-color-white, 0.75);
+      }
+
+      &:active {
+        background-color: rgba($ray-color-white, 0.2);
+      }
+
+      &[disabled] {
+        background-color: transparent;
+        border-color: transparent;
+        color: rgba($ray-color-white, 0.6);
+      }
     }
 
     &.#{$ray-class-prefix}button--danger {
