feat(elevation): add elevation util classes

--- a/packages/core/src/ray-core.scss
+++ b/packages/core/src/ray-core.scss
@@ -5,6 +5,7 @@
 
 @import './global/colors';
 @import './global/variables';
+@import './global/elevation';
 @import './global/base';
 @import './global/typography';
 @import './global/material-grid/mdc-layout-grid';
