fix: add italic support for i tags in running-text
closes #153

--- a/packages/core/src/global/_typography.scss
+++ b/packages/core/src/global/_typography.scss
@@ -302,6 +302,10 @@
     ol {
       @extend .#{$ray-class-prefix}list;
     }
+
+    i {
+      font-style: italic;
+    }    
   }
 
   @if global-variable-exists(ray-assign-typography-styles-natively) ==
