--- a/packages/docs-app/src/components/TopNav/top-nav.scss
+++ b/packages/docs-app/src/components/TopNav/top-nav.scss
@@ -1,8 +1,7 @@
 .top-nav {
   position: fixed;
   top: 0;
-  color: $ray-color-white;
-  background: #282a36;
+  background: #fff;
   z-index: 9999;
   width: 100%;
   border-bottom: 1px solid $ray-color-gray-10;
