--- a/packages/docs-app/src/components/TopNav/top-nav.scss
+++ b/packages/docs-app/src/components/TopNav/top-nav.scss
@@ -1,16 +1,24 @@
 .top-nav {
-  position: fixed;
-  top: 0;
   background: #fff;
-  z-index: 9999;
-  width: 100%;
   border-bottom: 1px solid $ray-color-gray-10;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+  position: fixed;
 }
 
 .top-nav__inner {
-  height: $top-nav-height;
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+
+  @include ray-breakpoint(desktop) {
+    padding-top: 0;
+    padding-bottom: 0;
+    height: $top-nav-height;
+  }
 }
 
 .top-nav__heading {
@@ -18,7 +26,7 @@
   display: inline-block;
   text-decoration: none;
   line-height: 1.2;
-  margin: 0 auto 0.25rem 0;
+  margin: 0 auto 0 0;
   white-space: nowrap;
   color: inherit !important;
 
@@ -37,5 +45,25 @@
     font-size: 1rem;
     color: $ray-color-text-light;
     font-weight: 400;
+  }
+}
+
+.top-nav__feedback {
+  @include ray-breakpoint(phone, desktop) {
+    display: none;
+  }
+}
+
+.top-nav__mobile-toggle {
+  margin-right: 0.5rem;
+  display: inline-block;
+
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
+
+  @include ray-breakpoint(desktop) {
+    display: none;
   }
 }
