fix: update color, test please ignore

--- a/packages/core/src/global/_colors.scss
+++ b/packages/core/src/global/_colors.scss
@@ -3,7 +3,7 @@ $ray-color-black: #000000;
 
 $ray-color-blue-10: hsl(240, 100%, 100% - 10%);
 $ray-color-blue-20: hsl(240, 100%, 100% - 20%);
-$ray-color-blue-50: hsl(240, 100%, 100% - 50%);
+$ray-color-blue-50: purple;
 $ray-color-blue-60: hsl(240, 100%, 100% - 60%);
 $ray-color-blue-70: hsl(240, 100%, 100% - 70%);
 
