--- a/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
+++ b/packages/core/src/components/radio-checkbox/_radio-checkbox.scss
@@ -26,6 +26,7 @@
         background-color: $ray-color-white;
         border: $ray-radio-checkbox-border-width solid $ray-color-black;
         min-width: $ray-radio-checkbox-size;
+        width: $ray-radio-checkbox-size;
         height: $ray-radio-checkbox-size;
         position: relative;
         display: inline-block;
