add micro chips

--- a/packages/core/src/components/chip/_chip.scss
+++ b/packages/core/src/components/chip/_chip.scss
@@ -40,3 +40,7 @@ $ray-chip-height: $ray-spacing-xs * 2 + 1rem;
     color: $ray-color-white;
   }
 }
+
+.#{$ray-class-prefix}chip--micro {
+  padding: 0 0.75rem;
+}
