--- a/packages/core/src/components/radio-pill/_radio-pill.scss
+++ b/packages/core/src/components/radio-pill/_radio-pill.scss
@@ -1,4 +1,5 @@
 @import '../../global/variables';
+@import '../../global/mixins/exports';
 
 @include exports('ray-radio-pill') {
   .#{$ray-class-prefix}radio-pill__wrapper {
