--- a/packages/core/src/components/chip/_chip.scss
+++ b/packages/core/src/components/chip/_chip.scss
@@ -38,6 +38,7 @@ $ray-chip-height: $ray-spacing-xs * 2 + 1rem;
 
   .#{$ray-accessibility-class} &:focus {
     box-shadow: $ray-box-shadow-focus-state;
+    outline: 0;
   }
 }
 
