--- a/packages/core/src/components/tabs/_tabs.scss
+++ b/packages/core/src/components/tabs/_tabs.scss
@@ -1,27 +1,33 @@
+@import '../../global/variables';
+@import '../../global/typography';
+@import '../../global/mixins/exports';
+
 $tabs-border-size: 1px;
 
-.#{$ray-class-prefix}tabs {
-  border-bottom: $tabs-border-size solid $ray-color-blue-50;
-  display: flex;
+@include exports('ray-tabs') {
+  .#{$ray-class-prefix}tabs {
+    border-bottom: $tabs-border-size solid $ray-color-blue-50;
+    display: flex;
 
-  &__item {
-    @extend .#{$ray-class-prefix}text--body-large;
-    display: block;
-    cursor: pointer;
-    color: $ray-color-blue-50;
-    text-align: center;
-    min-width: 200px;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    margin-bottom: -$tabs-border-size !important;
+    &__item {
+      @extend .#{$ray-class-prefix}text--body-large;
+      display: block;
+      cursor: pointer;
+      color: $ray-color-blue-50;
+      text-align: center;
+      min-width: 200px;
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+      margin-bottom: -$tabs-border-size !important;
 
-    &:hover {
-      background-color: $ray-color-blue-50;
-      border-bottom: 1px solid $ray-color-blue-50;
-    }
+      &:hover {
+        background-color: $ray-color-blue-50;
+        border-bottom: 1px solid $ray-color-blue-50;
+      }
 
-    &--active {
-      border-bottom: 1px solid $ray-color-blue-50;
+      &--active {
+        border-bottom: 1px solid $ray-color-blue-50;
+      }
     }
   }
 }
