--- a/packages/core/src/components/chip/_chip.scss
+++ b/packages/core/src/components/chip/_chip.scss
@@ -1,4 +1,5 @@
 @import '../../global/variables';
+@import '../../global/mixins/breakpoints';
 
 $ray-chip-border-width: 1px;
 $ray-chip-height: $ray-spacing-xs * 2 + 1rem;
@@ -12,6 +13,7 @@ $ray-chip-height: $ray-spacing-xs * 2 + 1rem;
   color: $ray-color-blue-50;
   display: inline-block;
   cursor: pointer;
+  outline: 0;
 
   &:not(:last-child) {
     margin-right: $ray-spacing-xs;
