--- a/packages/core/src/ray-exports.scss
+++ b/packages/core/src/ray-exports.scss
@@ -1,5 +1,10 @@
 @import 'global/variables';
 
+$aspect-ratios: ();
+@each $ratio, $value in $ray-image-ratio-map {
+  $aspect-ratios: append($aspect-ratios, $ratio);
+}
+
 :export {
   @each $key, $value in $ray-layout-grid-breakpoints {
     ray-breakpoint-#{$key}: $value;
@@ -48,4 +53,9 @@
   ray-color-gray-30: $ray-color-gray-30;
   ray-color-gray-50: $ray-color-gray-50;
   ray-color-gray-60: $ray-color-gray-60;
+
+  ray-image-aspect-ratios: $aspect-ratios;
+  @each $ratio, $value in $ray-image-ratio-map {
+    ray-image-aspect-ratio-#{$ratio}: $value;
+  }
 }
