docs: add type scale

--- a/packages/core/src/components/table/_table.scss
+++ b/packages/core/src/components/table/_table.scss
@@ -24,6 +24,10 @@
       [dir='rtl'] & {
         text-align: right;
       }
+
+      &:not(:last-child) {
+        padding-right: 1rem;
+      }
     }
 
     tr {
