chore: move typescript to product-react

--- a/packages/product-react/src/Tabs/Tabs.scss
+++ b/packages/product-react/src/Tabs/Tabs.scss
@@ -51,7 +51,7 @@ $hover-animation-time: 0.33s;
 
   @include underline-hover($hover-border-size, $hover-animation-time);
 
-  & button {
+  & .ray-product__button {
     width: 100%;
   }
 }
