chore(product-react/Tabs): remove ray core colors

--- a/packages/product-react/src/components/Tabs/Tabs.scss
+++ b/packages/product-react/src/components/Tabs/Tabs.scss
@@ -1,6 +1,6 @@
+@import '@wework/ray-core/scss/ray-core.scss';
+
 $easing: cubic-bezier(0.694, 0.0482, 0.335, 1);
-$ray-color-black: black;
-$ray-color-blue-50: blue;
 $hover-border-size: 2px;
 $hover-animation-time: 0.33s;
 
