fix(product-react/Tabs): fix scss import

--- a/packages/product-react/src/components/Tabs/Tabs.scss
+++ b/packages/product-react/src/components/Tabs/Tabs.scss
@@ -1,4 +1,4 @@
-@import '@wework/ray-core/scss/ray-core.scss';
+@import '~@wework/ray-core/scss/ray-core.scss';
 
 $easing: cubic-bezier(0.694, 0.0482, 0.335, 1);
 $hover-border-size: 2px;
