--- a/packages/core/src/components/chip/_chip.scss
+++ b/packages/core/src/components/chip/_chip.scss
@@ -56,6 +56,14 @@ $ray-chip-height: $ray-spacing-xs * 2 + 1rem;
     }
   }
 
+  .#{$ray-class-prefix}chip--disabled,
+  .#{$ray-class-prefix}chip--disabled:hover {
+    background-color: $ray-color-white !important;
+    color: $ray-color-gray-30 !important;
+    border-color: $ray-color-gray-30 !important;
+    cursor: not-allowed !important;
+  }
+
   .#{$ray-class-prefix}chip__icon-wrapper {
     display: flex;
     align-items: center;
