--- a/packages/product-react/src/components/Card/Card.scss
+++ b/packages/product-react/src/components/Card/Card.scss
@@ -1,8 +1,9 @@
 $card-compact-padding: 1rem;
 $card-compact-div: 0;
 $card-compact-inactive: #666;
+$card-card-content: break-word;
 
-.lucia-card {
+.ray-card {
   &--compact {
     padding: $card-compact-padding;
   }
@@ -14,8 +15,8 @@ $card-compact-inactive: #666;
   &--inactive {
     color: $card-compact-inactive;
   }
-}
 
-.ray-card__content {
-  overflow-wrap: break-word;
+  &__content {
+    overflow-wrap: $card-card-content;
+  }
 }
