Add support for append addon which works like prepend one

--- a/packages/core/src/components/text-field/_text-field.scss
+++ b/packages/core/src/components/text-field/_text-field.scss
@@ -6,6 +6,7 @@
     @include required-support('text-field');
     @include icon-support('text-field');
     @include prepend-support('text-field');
+    @include append-support('text-field');
   }
 
   .#{$ray-class-prefix}text-area {
