--- a/packages/core/src/global/mixins/_form-items.scss
+++ b/packages/core/src/global/mixins/_form-items.scss
@@ -323,14 +323,8 @@
   }
 }
 
-@mixin prepend-support($class) {
-  &--disabled {
-    .#{$ray-class-prefix}#{$class}__prepend {
-      opacity: 0.4;
-    }
-  }
-
-  &__prepend {
+@mixin input-addon($class) {
+  &#{$class} {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -342,10 +336,37 @@
     min-width: rem(69px);
     background-color: $ray-color-gray-03;
     border-right: 1px solid $ray-color-gray-10;
+    @content;
+  }
+}
+
+@mixin prepend-support($class) {
+  &--disabled {
+    .#{$ray-class-prefix}#{$class}__prepend {
+      opacity: 0.4;
+    }
+  }
+  @include input-addon('__prepend') {
     border-radius: $ray-border-radius 0 0 $ray-border-radius;
 
     [dir='rtl'] & {
       border-radius: 0 $ray-border-radius $ray-border-radius 0;
+    }
+  }
+}
+
+@mixin append-support($class) {
+  &--disabled {
+    .#{$ray-class-prefix}#{$class}__append {
+      opacity: 0.4;
+    }
+  }
+
+  @include input-addon('__append') {
+    border-radius: 0 $ray-border-radius $ray-border-radius 0;
+
+    [dir='rtl'] & {
+      border-radius: $ray-border-radius 0 0 $ray-border-radius;
     }
   }
 }
