Basic dropdown implementation including basic events like focus, blur, change. Placeholders and support of disabled, required, compact and other ray modificators

--- a/packages/core/src/ray-core.scss
+++ b/packages/core/src/ray-core.scss
@@ -19,6 +19,7 @@
 @import './components/fieldset/fieldset';
 @import './components/text-field/text-field';
 @import './components/select/select';
+@import './components/dropdown/dropdown';
 @import './components/image/image';
 @import './components/table/table';
 @import './components/tabs/tabs';
