Add form mixins import to scss file

--- a/packages/core/src/components/dropdown/_dropdown.scss
+++ b/packages/core/src/components/dropdown/_dropdown.scss
@@ -1,4 +1,5 @@
 @import '../../global/variables';
+@import '../../global/mixins/form-items';
 @import '../../global/mixins/exports';
 
 $component-name: 'dropdown';
